--- a/form.css
+++ b/form.css
@@ -61,7 +61,6 @@ h1{
 
 /*
 #formulario{
-
     background-repeat: no-repeat;
     background-size: 100px;
     background-size: 25% 25%;
@@ -75,5 +74,34 @@ h1{
     top: 275px;
     left:750px; */
 
+}
+
+
+.navigation {
+    display: flex;
+    flex-flow: row wrap;
+    list-style: none;
+    margin: 0;
+    background: black;
+}
+
+.bottons{
+    position : relative;
+    left :1205px;
+    display: flex;
+    flex-flow: row;
+    list-style: none;
+    font-size: 33px;
+}
+
+.navigation a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+}
+
+.navigation a:hover {
+    background: #1565C0;
 }
 
