--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body{
 }
 
 .bottons{
-    position : relative;
+    position : sticky;
     left :1105px;
     display: flex;
     flex-flow: row;
