--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("uefa.jpg");
+    background-image: url("../img/uefa.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
